external/linkwarden/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: linkwarden
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`link.chriggle.com`)
      kind: Rule
      services:
        - name: linkwarden
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: chriggle-com-tls
